<resources>
    <string name="app_name">Комунальчик</string>
    <string name="menu_app_name">КОМУНАЛЬЧИК</string>
    <string name="action_settings">Settings</string>

    <string name="continue_bills">Продовжити рахунок</string>
    <string name="new_bills">Новий рахунок</string>
    <string name="saved_bills">Збережені рахунки</string>
    <string name="settings">Опції</string>
    <string name="help">Як користуватись</string>
    <string name="exit">Вихід</string>



    <string name="communal">ЖИТЛОВО-КОМУНАЛЬНІ ТА ІНШІ ПОСЛУГИ</string>
    <string name="gas">ГАЗ</string>
    <string name="coldWater">ПОСТАЧАННЯ ХОЛОДНОЇ ВОДИ ТА ВОДОВІДВЕДЕННЯ</string>
    <string name="wasteWater">ВОДОВІДВЕДЕННЯ ГАРЯЧОЇ ВОДИ</string>
    <string name="hotWater">ПОСТАЧАННЯ ГАРЯЧОЇ ВОДИ</string>
    <string name="heating">ОПАЛЕННЯ</string>
    <string name="electricity">ЕЛЕКТРОЕНЕРГІЯ</string>
    <string name="phone">КОМУНІКАЦІЙНІ ПОСЛУГИ</string>
    <string name="total">ЗАГАЛЬНІ РЕЗУЛЬТАТИ:</string>

    <string name="sum">До сплати</string>
    <string name="total_sum">Всього до сплати:</string>
    <string name="save">ЗБЕРЕГТИ</string>
    <string name="counter">Лічильник:</string>

    <string name="gas_calc_by">Нарахування за</string>
    <string name="gas_calc_by_rate">тарифом</string>
    <string name="gas_calc_by_counter">Нарахування за</string>
    <string name="gas_calc">Нарахування за:</string>
    <string name="area">Площа</string>
    <string name="registered">Зареєстровано</string>
    <string name="overpayment">Переплата:</string>
    <string name="debt">Борг</string>
    <string name="additional_payment">Додатково сплачую:</string>

    <string name="current"> поточні </string>
    <string name="previous"> попередні </string>
    <string name="difference"> різниця </string>
    <string name="amount_m2">Обсяг,м2</string>
    <string name="amount_m3">Обсяг,м3</string>
    <string name="rate">Тариф</string>
    <string name="calculated">Нараховано</string>
    <string name="recalculated">Перерах-к</string>
    <string name="subsidy">Субсидія</string>
    <string name="compensation">Компенсація</string>
    <string name="data">Показання лічильників,м3</string>
    <string name="consumed">Спожито</string>

    <string name="communal_calc">Стаття нарахувань</string>
    <string name="communal_sum">НАРАХОВАНО:</string>
    <string name="house">Утримання будинків та прибуд. територій</string>

    <string name="e_to">до</string>
    <string name="e_from">від</string>
    <string name="e_over">понад</string>
    <string name="e_units">кВтг</string>

    <string name="e_current">Поточні показання, кВтг</string>
    <string name="e_previous">Попередні показання, кВтг</string>
    <string name="e_rate">Тариф, грн.</string>
    <string name="e_consumed">Спожито, кВтг</string>
    <string name="e_subsidy">пільгові кВтг</string>
    <string name="e_below250">до 100 кВтг</string>
    <string name="e_below800">від 100 до 600 кВтг</string>
    <string name="e_over800">понад 600 кВтг</string>
    <string name="e_rate_subsidy">Пільговий тариф</string>
    <string name="e_rate_below250">Тариф до 100 кВтг</string>
    <string name="e_rate_below800">Тариф від 100 до 600 кВтг</string>
    <string name="e_rate_over800">Тариф понад 600 кВтг</string>
    <string name="e_sum">Сума до сплати, грн.</string>
    <string name="e_total_sum">Усього до сплати, грн.</string>

    <string name="phone_calc">Нараховано за місяць</string>
    <string name="phone_rate">Абонплата за ТП</string>
    <string name="phone_total">Всього нараховано за послуги:</string>
    <string name="phone_sum">Разом</string>
    <string name="tax">ПДВ</string>
    <string name="percent_sign">%</string>
    <string name="no_tax">без ПДВ</string>
    <string name="radio_rate">Абонплата за користування радіоточкою</string>

    <string name="table_sum">Сума до сплати:</string>
    <string name="table_group_sum">РАЗОМ ДО СПЛАТИ:</string>
    <string name="net_sum">ВСЬОГО ДО СПЛАТИ:</string>


    <!-- Error messages -->

    <string name="err_new_bill_name_empty">Помилка: назва не може бути пустою</string>

    <string name="err_new_segment_name_empty">Помилка: вкажіть назву сегменту</string>
    <string name="err_new_segment_zero_denom">Помилка: не можна ділити на нуль</string>
    <string name="err_new_segment_empty_denom">Помилка: вкажіть знаменник</string>
    <string name="err_new_segment_empty_num">Помилка: вкажіть значення сегменту</string>


    <string name="err_fraction_count">Секція може мати тільки одну дріб</string>
    <string name="err_fraction_format">Оберіть "&#x00BE;", щоб використати дріб</string>
    <string name="err_decimal_count">Десяткове число може мати тільки одну точку</string>
    <string name="err_fraction_decimal">Пропорція не може мати точок</string>
    <string name="err_fraction_num_empty">Вкажіть чисельник, щоб додати семент</string>
    <string name="err_fraction_den_empty">Вкажіть знаменник, щоб додати семент</string>
    <string name="err_num_empty">Заповніть числове поле, щоб додати семент</string>
    <string name="err_name_empty">Будь ласка, вкажіть назву запису</string>
    <string name="err_storage_save">Помилка: не вдалося зберегти запис</string>
    <string name="err_excel_write">Помилка: не вдалося створити файл</string>
    <string name="err_storage_delete">Помилка: не вдалося видалити запис</string>

    <string name="format_decimal">0.00</string>
    <string name="format_percent">%</string>
    <string name="format_fraction">&#x00BE;</string>

    <string name="type_decimal">Десяткове число</string>
    <string name="type_percent">Проценти</string>
    <string name="type_fraction_num">Чисельник</string>
    <string name="type_fraction_den">Знаменник</string>

    <string name="calc_btn">РОЗРАХУВАТИ</string>
    <string name="save_btn">ЗБЕРЕГТИ</string>
    <string name="global_segment_btn">ЗАГАЛЬНИЙ СЕГМЕНТ</string>
    <string name="calc_request">Натисніть \"розрахувати\" під таблицею,\n яку бажаєте додати до загальної</string>

    <string name="segment_picker_title">НОВИЙ ЗАГАЛЬНИЙ СЕГМЕНТ</string>
    <string name="segment_picker_name">Назва сегменту</string>
    <string name="segment_picker_format">Формат сегменту (0.00, %, &#x00BE;)</string>
    <string name="segment_picker_cancel">Відміна</string>
    <string name="segment_picker_add">Додати</string>

    <string name="data_saver_title">ЗБЕРЕЖЕННЯ ТАБЛИЦЬ</string>
    <string name="data_saver_name">Назва запису</string>
    <string name="data_saver_file_writer">Записати в Excel файл</string>
    <string name="data_saver_excel_writer">ЗАПИСАТИ ДЛЯ EXCEL?</string>
    <string name="data_saver_excel_success">Excel файл успішно створено</string>
    <string name="data_saver_add">Зберегти</string>
    <string name="data_saver_write_file">Записати</string>
    <string name="data_saver_success">Запис успішно збережено!</string>
    <string name="data_saver_delete_success">Запис успішно видалено</string>

    <string name="delete_storage">ВИДАЛИТИ ЗАПИС?</string>
    <string name="delete_add">Видалити</string>



    <string-array name="counter_indicator">
        <item>нема</item>
        <item>є</item>
    </string-array>

    <string-array name="counter_indicator_gas">
        <item>тарифом</item>
        <item>лічильником</item>
    </string-array>

    <string name="settings_bills">Таблиці рахунків</string>
    <string name="settings_segments">Глобальні сегменти</string>

    <string name="settings_bills_success">Таблиці рахунків успішно змінено.</string>

    <string name="settings_rate">Тариф:</string>

    <string name="settings_electricity_steps">Ступені (кВтг)</string>
    <string name="settings_electricity_subsidy">Пільгова:</string>
    <string name="settings_electricity_step1">Ступінь №1:</string>
    <string name="settings_electricity_step2">Ступінь №2:</string>
    <string name="settings_electricity_step3">Ступінь №3:</string>

    <string name="settings_electricity_rates">Тарифи</string>
    <string name="settings_electricity_rate_subsidy">Пільговий:</string>

    <string name="settings_phone_tax">ПДВ (%):</string>
    <string name="settings_phone_rate">Абонплата</string>
    <string name="settings_phone_phone_rate">Телефон:</string>
    <string name="settings_phone_radio_rate">Радіо:</string>

    <string name="segment_title_create">НОВИЙ ГЛОБАЛЬНИЙ СЕГМЕНТ</string>
    <string name="segment_title_update">ОНОВЛЕННЯ СЕГМЕНТУ</string>
    <string name="segment_title_common">НОВИЙ ЗАГАЛЬНИЙ СЕГМЕНТ</string>

    <string name="bill_name">Назва:</string>
    <string name="bill_date">Дата:</string>

    <string name="segment_name">Назва:</string>

    <string name="segment_unit">Тип:</string>
    <string name="segment_value">Значення:</string>

    <string name="segment_create_success">Сегмент успішно створено.</string>
    <string name="segment_update_success">Сегмент успішно оновлено</string>

    <string name="segment_create">Додати</string>
    <string name="segment_update">Змінити</string>
    <string name="segment_back">Назад</string>

    <string name="alert_dialog_save_btn_new">Новий рахунок</string>
    <string name="alert_dialog_save_btn_update">Оновити рахунок</string>
    <string name="alert_dialog_save_hint_name">Назва рахунку</string>

    <string name="alert_dialog_bills_settings_save">Ви дійсно бажаєте змінити значення?</string>
    <string name="alert_dialog_bills_save">Зберегти розраховані рахунки?</string>
    <string name="alert_dialog_bills_delete">Ви дійсно бажаєте видалити рахунок?</string>
    <string name="alert_dialog_bills_saved_bill_exit_message">Не збережені зміни будуть втрачені.\nВи дійсно бажаєте вийти?</string>
    <string name="alert_dialog_bills_new_bill_warning">Зміни в продовжуваному рахунку будуть втрачені.\nДійсно створити новий рахунок?</string>
    <string name="alert_dialog_segments_delete">Ви дійсно бажаєте видалити сегмент?</string>

    <string name="alert_dialog_yes">ТАК</string>
    <string name="alert_dialog_no">HI</string>

    <string name="dummy_segment_name_value">Людина</string>

    <string name="segment_list_no_pages">-</string>
    <string name="segment_list_no_segments">Нема глобальних сегментів</string>
    <string name="bill_list_no_bills">Нема збережених рахунків</string>

    <string name="bill_save_success">Рахунок успішно створено!</string>
    <string name="bill_update_success">Рахунок успішно оновлено!</string>
    <string name="excel_write_success">Excel файл успішно створено!</string>

</resources>
