<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:gravity="center|center_vertical|center_horizontal"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:minWidth="250dp">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_bills"
        android:id="@+id/btn_continue_bills"

        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_bills"
        android:id="@+id/btn_new_bills"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/saved_bills"
        android:id="@+id/btn_saved_bills"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:id="@+id/btn_settings"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:id="@+id/btn_exit"
        android:layout_gravity="center_horizontal" />
</LinearLayout>