<?xml version="1.0" encoding="utf-8"?>
<Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
    android:keyWidth="20%p"
    android:keyHeight="11%p" >

    <Row>
        <Key android:codes="55000"    android:keyLabel="@string/format_decimal" android:keyEdgeFlags="left" android:isSticky="true" />
        <Key android:codes="49"    android:keyLabel="1" />
        <Key android:codes="50"    android:keyLabel="2" />
        <Key android:codes="51"    android:keyLabel="3" />
        <Key android:codes="-5"    android:keyIcon="@mipmap/ic_action_backspace" android:isRepeatable="true" />
    </Row>

    <Row>
        <Key android:codes="55001"    android:keyLabel="@string/format_percent" android:keyEdgeFlags="left" android:isSticky="true" />
        <Key android:codes="52"    android:keyLabel="4"   />
        <Key android:codes="53"    android:keyLabel="5" />
        <Key android:codes="54"    android:keyLabel="6" />
        <Key android:codes="10"    android:keyIcon="@mipmap/enter" android:keyEdgeFlags="right" />
    </Row>

    <Row>
        <Key android:codes="55002" android:keyLabel="@string/format_fraction" android:keyEdgeFlags="left" android:isSticky="true"  />
        <Key android:codes="55"    android:keyLabel="7" />
        <Key android:codes="56"    android:keyLabel="8" />
        <Key android:codes="57"    android:keyLabel="9" />
        <Key android:codes="46" android:keyLabel="." android:keyEdgeFlags="right" />z
    </Row>

    <Row>
        <Key android:codes="48"  android:keyLabel="0"   android:horizontalGap="40%p" android:keyEdgeFlags="right"  />
        <Key android:codes="47"    android:keyLabel="/"  android:horizontalGap="20%p"  android:keyEdgeFlags="right" />
    </Row>
</Keyboard>