<?xml version="1.0" encoding="utf-8"?>
<Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
    android:keyWidth="25%p"
    android:keyHeight="7.5%p" >

    <Row>
        <Key android:codes="55000"    android:keyLabel="@string/format_decimal" android:keyEdgeFlags="left" android:keyWidth="33.33%p" android:isSticky="true" />
        <Key android:codes="55001"    android:keyLabel="@string/format_percent" android:keyWidth="33.33%p" android:isSticky="true" />
        <Key android:codes="55002"    android:keyLabel="@string/format_fraction" android:keyWidth="33.33%p" android:isSticky="true" />
    </Row>

    <Row>
        <Key android:codes="49"    android:keyLabel="1" android:keyEdgeFlags="left"/>
        <Key android:codes="50"    android:keyLabel="2" />
        <Key android:codes="51"    android:keyLabel="3" />
        <Key android:codes="-5"    android:keyIcon="@mipmap/ic_action_backspace" android:isRepeatable="true" />
    </Row>
    <Row>
        <Key android:codes="52"    android:keyLabel="4" android:keyEdgeFlags="left" />
        <Key android:codes="53"    android:keyLabel="5" />
        <Key android:codes="54"    android:keyLabel="6" />
        <Key android:codes="10"    android:keyIcon="@mipmap/enter" android:keyEdgeFlags="right" />
    </Row>

    <Row>
        <Key android:codes="55"    android:keyLabel="7" android:keyEdgeFlags="left"  />
        <Key android:codes="56"    android:keyLabel="8" />
        <Key android:codes="57"    android:keyLabel="9" />
        <Key android:codes="46" android:keyLabel="." android:keyEdgeFlags="right" />
    </Row>

    <Row>
        <Key android:codes="48"     android:horizontalGap="25%p"  android:keyLabel="0" android:keyEdgeFlags="right"  />
        <Key android:codes="47"    android:keyLabel="/" android:horizontalGap="25%p" android:keyEdgeFlags="right"  />

    </Row>
</Keyboard>